[package]
name = "reforge"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Turner"]
rust-version = "1.91.0"
license = "MIT"

[dependencies]
clap = { version = "4.6.0" , features = ["derive"]}
eyre = "0.6.12"
foundry-common = { path = "foundry/crates/common"}
forge = { path = "foundry/crates/forge" }
foundry-cli = { path = "foundry/crates/cli" }
foundry-compilers = { version = "0.19.14", default-features = false }
foundry-config = { path = "foundry/crates/config" }
forge-fmt = { path = "foundry/crates/fmt" }
forge-lint = { path = "foundry/crates/lint" }
glob = "0.3"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
solar = {package = "solar-compiler", version = "=0.1.8", default-features = false }
soldeer-core = { version = "=0.10.0", features = ["serde"] }
tracing = "0.1"

[patch.crates-io]
## solar
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
